# heimdall

./: .gitignore  README.md  app.py  config.py  heimdall.settings.json  pyproject.toml
.github/workflows/: python-publish.yml
src/: app.py  database.py  heimdall.py  heimdall.settings.json
src/heimdall/: __init__.py  __main__.py  app.py  config.py  database.py  monitor.py
src/heimdall.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/heimdall/templates/: dashboard.html
src/heimdall_network_monitor.egg-info/: PKG-INFO  SOURCES.txt
src/static/: style.css
static/: style.css
templates/: dashboard.html
