[project]
name = "heimdall-network-monitor"
version = "0.2.1"
requires-python = ">=3.8"
dependencies = [
    "flask>=3.0.0",
]
description = "A Python app that continuously polls your home WiFi and network uptime, logs any downtime, and serves a live status dashboard in your browser. The dashboard can be accessed by any device on the same network."
authors = [
    {name = "Vishnuu Panickar", email= "vishnuu09@gmail.com"}
]
readme = "README.md"